[tool.poetry]
name = "ziglings"
version = "0.1.0"
description = ""
authors = ["Fabian Leimgruber <fabian.leimgruber@ait.ac.at>"]

[tool.poetry.dependencies]
python = "~3.9"
watchgod = "^0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
